Update 21. 22nd Feb Assignment.ipynb

--- a/21. 22nd Feb Assignment.ipynb
+++ b/21. 22nd Feb Assignment.ipynb
@@ -16,6 +16,14 @@
     "#### Flask Webscrapper Github - https://github.com/baljeetjangra/web-scrapping-app"
    ]
   },
+   {
+   "cell_type": "markdown",
+   "id": "77a5d951",
+   "metadata": {},
+   "source": [
+    "#### AWS Deployment Link -http://flaskwebappdev-env.eba-7qkxhzfa.us-east-1.elasticbeanstalk.com/"
+   ]
+  },
   {
    "cell_type": "markdown",
    "id": "7b8ae1c8",
